# xiuxian-structure

./: .gitignore  .pre-commit-config.yaml  .release-notes-v1.1.0.md  .release-notes-v1.2.0.md  .release-notes-v1.3.0.md  .release-notes-v1.4.0.md  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README_EN.md  index.html  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  索引.md
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  pull_request_template.md
CHANGELOG/: index.html
CONTRIBUTING/: index.html
SECURITY/: index.html
data/: _labels.yaml  aether.yaml  artifacts.yaml  ascension.yaml  combat.yaml  contracts.yaml  demon_realm.yaml  divine_powers.yaml  divine_realm.yaml  divine_sense.yaml  elixirs.yaml  factions.yaml  formations.yaml  heart_demons.yaml  immortal_realm.yaml  karma.yaml  monsters.yaml  realms.yaml  relations.yaml  schema.json  secret_realm.yaml  spirit_roots.yaml  spirit_stones.yaml  spirit_weapons.yaml  talismans.yaml  techniques.yaml  tian_cai.yaml  time_space.yaml  tribulations.yaml  underworld_realm.yaml  yao_xiu.yaml  zong_men.yaml
docs/: ARCHITECTURE.md  RELATIONS_AUDIT.md  SCHEMA.md  图谱.md
docs_src/: CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  index.md  冥界体系  战斗体系  神界体系  索引.md  魔界体系
examples/: README.md  feed-to-llm.md  index.html  第一章_散修韩立.md
interactive/: README.md  index.html
scripts/: batch_generate.py  build_docs_src.py  build_graph.py  eval_llm.py  export.py  fix_relations_p13.py  generate_node.py  interactive.py  validate.py  web_app.py
search/: search_index.json
stories/: README.md  aoyue_npc_fanpai.md  demo_measuring_spirit.md  demo_sijie.md  hanli_vol1_mochui.md  hanli_vol2_yuanzou.md  v215_demo.md  v28_demo.md  v29_demo.md  v31_demo.md  v32_demo.md
tests/: eval_prompts.yaml  test_build_graph.py  test_eval_batch.py  test_interactive.py  test_mkdocs_validate.py  test_performance.py  test_state_features.py  test_stories.py  test_systems.py  test_validate.py  test_yaml_schema.py
丹药体系/: 丹药.md  九幽还魂草.md  培婴丹.md  清心丹.md  渡劫丹.md  疗伤丹.md  筑基丹.md  结丹丹.md
冥界体系/: 冥兽.md  冥功.md  冥劫.md  冥器.md  冥域.md  冥族.md  冥气.md  冥界纪元.md  冥界轮回.md
功法体系/: 功法.md  金剑诀.md  长春功.md  长生诀.md
势力体系/: 势力.md  天霞山.md  妖修海域.md  (+2 more)
(+567 files in other folders)
